tests/golden/type_errors/inferred_let_array_assignment_mismatch.cd
let xs = [];
xs = 1;
